# core

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: app.rs  main.rs
client/src/graphic/: camera.rs  mod.rs
client/src/graphic/terrain/: chunk_mesh.rs  mod.rs  ordered_chunk_pos.rs  terrain.wgsl  texture_atlas.rs
client/src/graphic/ui/: mod.rs
client/src/networking/: mod.rs
crates/math/: Cargo.toml  README.md
crates/math/src/: aabb.rs  consts.rs  lib.rs  plane.rs  positions.rs  world_pos.rs
crates/networking/: Cargo.toml  README.md
crates/networking/src/: c2s.rs  errors.rs  lib.rs  packets.rs
crates/utils/: README.md
crates/utils/src/: array_utils.rs  lib.rs  memory_utils.rs  spare_set.rs
crates/world_core/: Cargo.toml  README.md
crates/world_core/src/: block_state.rs  lib.rs
crates/world_core/src/chunk/: implementation.rs  mod.rs
crates/world_core/src/chunk_manager/: mod.rs
server/: Cargo.toml
server/src/: app.rs  main.rs
server/src/networking/: mod.rs
services-connector/: Cargo.toml
services-connector/src/: lib.rs
services-connector/src/packets/: builder.rs  mod.rs
services-connector/src/packets/model/: handshake.rs
services-connector/src/protocol_engine/: mod.rs  redis_engine.rs
