[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
networking = { path = "../crates/networking" }
world_core = { path = "../crates/world_core" }
math = { path = "../crates/math" }

renet = "0.0.14"
bytemuck = "1.14.1"
tuple_list = "0.1.3"
wgpu = "0.18.0"
image = { version = "0.24", features = ["png"] }
pollster = "0.3.0"
anyhow = "1.0.77"
rand = "0.8.5"
egui = { git = "https://github.com/emilk/egui.git" }
egui-winit = { git = "https://github.com/emilk/egui.git" }
egui-wgpu = { git = "https://github.com/emilk/egui.git" }




