[package]
name = "services-connector"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "services-connector"
path = "src/main.rs"

[dependencies]
log = "0.4.20"
futures = "0.3.28"
serde_json = "1.0.105"

derive_more = "0.99.17"
enum-assoc = "1.1.0"

[dependencies.tokio]
version = "1.32.0"
features = ["rt-multi-thread"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.redis]
version = "0.23.3"
features = ["tokio-comp", "connection-manager"]

[dependencies.bytes]
version = "1.5.0"
features = ["serde"]

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "fast-rng", "macro-diagnostics"]